--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,13 @@ nav a:hover {
     padding-left: 1rem;
     padding-right: 1rem;
     text-align: left;
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: baseline;
+
   }
 
   h1,
