--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ header {
 }
 
 header h1 {
-  margin: 0 0 .5rem;
+  margin: 0 0 .9rem;
   padding: 0;
   font-size: 2rem;
 }
@@ -52,7 +52,7 @@ nav a {
   padding: .5em .75em;
   color: #6c8fe0;
   text-decoration: none;
-  white-space: normal;
+  white-space: nowrap;
 }
 
 nav a:hover {
@@ -97,7 +97,7 @@ nav a:hover {
   }
 
   nav li {
-    width: auto;
+    width: 25%;
     text-align: center;
   }
 
@@ -125,13 +125,16 @@ nav a:hover {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: baseline;
-
   }
 
   h1,
   nav {
     display: inline-block;
     vertical-align: bottom;
+  }
+
+  nav li {
+    width: auto;
   }
 
   h1 {
